move public dir and create only-jquery page

--- a/_server/index.jade
+++ b/_server/index.jade
@@ -10,4 +10,8 @@ html
         a(href="/page/2") Page 2
         a(href="/page/3") Page 3
       #main
-    script(src="/main.js")
+    if (mode === "ww")
+      script(src="/main.js")
+    else
+      script(src="/jquery.js")
+      script(src="/main.js")
